# anitaEventCorrelator

./: BedmapReader.cxx  BedmapReader.h  CMakeLists.txt  CorrelationSummary.h  FFTtools.cxx  FFTtools.h  LinkDef.h  Makefile  PrettyAnitaEvent.cxx  PrettyAnitaEvent.h  README  README.md  RampdemReader.cxx  RampdemReader.h  UsefulAdu5Pat.cxx  UsefulAdu5Pat.h  downloadBEDMAP2subset.sh  makeCorrelationRunTree.cxx  makeSimpleDST.cxx  plotDict.h  plotterSetup.sh  rootlogon.C
data/: baccus.root  baseList.root  baseListA2.root  baseListA3.root  baseListA4.root  hc2ahk.root  hc2aruns.root  hc2bhk.root  hc2bruns.root  sto-2.root  transientListUnrestrictedA3.root  transientListUnrestrictedA4.root  transientListUnrestrictedBranchedA3.root  transientListUnrestrictedBranchedA4.root  tree1.root
doc/: Doxyfile  header.html
eventCorrelator/branches/R1.0/: LinkDef.h  Makefile.arch  README  UsefulAdu5Pat.h  makeInitialGoodCorrelationRunTree.cxx  plotterSetup.sh
eventCorrelator/branches/R1.0/macros/: correlationTreeLoopFast.C  loopOverCorTree.C  makeDiagonalLeftDownPlots.C  makeSamePhiPlots.C  plotFakePrettyThings.C  runCorRunTree.C  runCorTreeTest.C  runCorrTreeLoop.C  runCorrTreeLoop1027.C  runPlotFakeThings.C
eventCorrelator/trunk/: BedmapReader.cxx  BedmapReader.h  CorrelationSummary.cxx  CorrelationSummary.h  FFTtools.cxx  LinkDef.h  Makefile  Makefile.arch  PrettyAnitaEvent.cxx  PrettyAnitaEvent.h  README  RampdemReader.cxx  RampdemReader.h  UsefulAdu5Pat.cxx  UsefulAdu5Pat.h  makeCorrelationRunTree.cxx  makeInitialGoodCorrelationRunTree.cxx  plotterSetup.sh
eventCorrelator/trunk/data/: ramp1kmdem_wgs_v2.hdr
eventCorrelator/trunk/doc/: doxynew.config  footer.html
eventCorrelator/trunk/groupDelay/: runGroupDelay.C
eventCorrelator/trunk/macros/: anglePlotter.C  antCorrelation.C  antOpt.C  attenCorrelation.C  correlationTreeLoop.C  crossCorrelation.C  loopOverCorTree.C  makeAllLeftSurfPlots.C  makeCorrelationTreeTest.C  makeDiagonalLeftDownPlots.C  makeLeftPhiPlot.C  makeLeftSurfPlots.C  makeRightPhiPlot.C  makeSamePhiPlots.C  plotPrettyThings.C  plotPrettyThings_C.d  quickDirtyInitialMapPlot.C  quickDirtyMapPlot.C  runCorRunTree.C  runCorTreeTest.C  runCorrTreeLoop.C  runCorrTreeLoopFast.C  runCrossCorrelation.C  runLoopOverCorTree.C  runLoopOverInitialCorTree.C  runPlotEventLoc.C  runPlotFakeThings.C  runPlotPrettyThings.C
eventCorrelator/trunk/macros/simonMacros/: anglePlotterNadir.C  anglePlotterNadir_C.d  anglePlotterOpt_C.d  antOpt2.C  deltaNumbers.txt  nadirOpt.C  newOpt.C  newSimonNumbers.txt  newSimonNumbers2.txt  oldSimonNumbers.txt  rParam_C.d  rRLUDOpt.C  runAngleOpt.C  runBottomRingOpt.C  runOpt.sh  runRParam.C  runSeavy.C  runSeavy2.C  seavyPlot2.C  thetaOpt2_C.d  thetaOpt3.C  thetaOpt3_C.d  thetaPlotter.C  thetaPlotter_C.d  topRingOpt.C
eventCorrelator/trunk/macros/simonMacros/plots/: RMSPhaseOpt.eps  RPhiOpt.eps  actalVsPhi.eps  afterROpt.eps  afterRPhiOpt.eps  deltaVsPhi-0p3.eps  deltaVsPhi-0p5.eps  deltaVsPhi.eps  deltaVsPhi0p2.ps  deltaVsTheta2.eps  expectedVsPhi.eps  firstRoundOpt.eps  lowerRingZeroed_2.eps  noOpt.eps  rmsOpt.eps  varyRFit.eps
eventCorrelator/trunk/macros/simonMacros/rmsPlots/: deltaRDeltaPhi.eps  rms_0  rms_1
groupDelay/: groupDelay.C  groupDelay.h  groupDelayAnita3.C  plotExampleSShape.C  runGroupDelayAnita3.C
include/: AntarcticAtmosphere.h  AntarcticaBackground.h  AntarcticaGeometry.h  BaseList.h  BedmapReader.h  CorrelationSummary.h  CorrelationSummaryAnita3.h  GeoMagnetic.h  HCHKTree.h  HCHKTree.h~  HCTree.h  Hical2.h  Hical2.h~  PayloadParameters.h  PrettyAnitaEvent.h  RampdemReader.h  RefractionModel.h  SkyMap.h  TArrowAntarctica.h  TGraphAntarctica.h  TH2DAntarctica.h  TProfile2DAntarctica.h  UsefulAdu5Pat.h
macros/: anglePlotter.C  anglePlotterOpt.C  anglePlotterOpt2.C  antCorrelation.C  antOpt.C  checkWais.C  correlationTreeLoop.C  correlationTreeLoopOpt.C  crossCorrelation.C  makeClockCalibFiles.C  makeCorrelationRunTree.C  makeDiagonalRightDownPlots.C  makeLeftPhiPlot.C  makeLeftSurfPlots.C  makeRightPhiPlot.C  makeSamePhiPlots.C  nearHorizonFresnel.C  plotDSTEvents.C  plotPrettyThings.C  plotPrettyThings_C.d  quickPlotEventLocation.C  radiosondeRaytrace.C  radiosondeRaytracePlot.C  runAngle.C  runAngleOpt.C  runAngleOpt2.C  runAntOpt.C  runCorrTreeLoop.C  runCorrTreeLoop1027.C  runCorrTreeLoopFast.C  runCrossCorrelation.C  runLoopOverCorTree.C  runLoopOverInitialCorTree.C  runPlotPrettyThings.C  testAstro.C  testConversion.C  testIGRF.C  testInversion.C  testPointing.C  testRefraction.C
macros/simonMacros/: anglePlotter.C  anglePlotter.C_backup  anglePlotterOpt.C  anglePlotterOpt2.C  anglePlotter_C.d  antOpt.C  antOpt2_C.d  antOpt_C.d  bottomRingOpt.C  combineFiles.C  deltaPlotter.C  nadirOpt_C.d  newOptNadir.C  rParam.C  rRLUDOpt_C.d  rootlogon.C  runAntOpt.C  runAntOpt2.C  runNadir.C  runNadirOpt.C  runNewOpt.C  runNewOpt_Nadir.C  runOptTest.sh  runRRLUDOpt.C  runTheta.C  runTheta2Opt.C  runTheta3Opt.C  runTopRingOpt.C  seavyPlot.C  seavyPlot2.C  thetaOpt2.C  topRingOpt_C.d
macros/simonMacros/plots/: ROpt.eps  RPhaseOpt.eps  afterPhiOpt.eps  deltaVsPhi-0p1.eps  deltaVsPhi0.ps  deltaVsPhi0p4.eps  deltaVsPhi0p5.eps  headingOpt.eps  lowerRingZeroed.eps  lowerRingZeroed_3.eps
macros/simonMacros/rmsPlots/: minRMS.eps
programs/: CMakeLists.txt  makeCorrelationRunTree.cxx  makeGoodCorrelationRunTree.cxx  makeSingleEventCorrelationTree.cxx
src/: AntarcticaAtmosphere.cxx  AntarcticaBackground.cxx  AntarcticaGeometry.cxx  BaseList.cxx  BedmapReader.cxx  CorrelationSummary.cxx  CorrelationSummaryAnita3.cxx  GeoMagnetic.cxx  Hical2.cxx  Hical2.cxx~  PayloadParameters.cxx  PrettyAnitaEvent.cxx  RampdemReader.cxx  RefractionModel.cxx  SkyMap.cxx  TArrowAntarctica.cxx  TGraphAntarctica.cxx  TH2DAntarctica.cxx  TProfile2DAntarctica.cxx  UsefulAdu5Pat.cxx
